--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                 <img src="images/match.png" alt="">
             </div>
         </section>
+        <section class="page">
+            <p>Page: 1 <a href="https://www.youtube.com/">2</a></p>
+        </section>
         <section class="videosection">
             <h2>Video Gallery</h2>
             <div class="videos">
